// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueSelectionFilter render - all configurations 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiButtonEmpty
      color="text"
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiButtonEmpty>
  }
  closePopover={[Function]}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
  withTitle={true}
>
  <div
    className="euiFilterSelect__note"
  >
    <div
      className="euiFilterSelect__noteContent"
    >
      <EuiLoadingChart
        mono={false}
        size="m"
      />
      <EuiSpacer
        size="xs"
      />
      <p>
        loading...
      </p>
    </div>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter render - options as a function 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiButtonEmpty
      color="text"
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiButtonEmpty>
  }
  closePopover={[Function]}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
  withTitle={true}
>
  <div
    className="euiFilterSelect__note"
  >
    <div
      className="euiFilterSelect__noteContent"
    >
      <EuiLoadingChart
        mono={false}
        size="m"
      />
      <EuiSpacer
        size="xs"
      />
      <p>
        Loading...
      </p>
    </div>
  </div>
</EuiPopover>
`;

exports[`FieldValueSelectionFilter render - options as an array 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <EuiButtonEmpty
      color="text"
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
      type="button"
    >
      Tag
    </EuiButtonEmpty>
  }
  closePopover={[Function]}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
  withTitle={true}
>
  <div
    className="euiFilterSelect__note"
  >
    <div
      className="euiFilterSelect__noteContent"
    >
      <EuiLoadingChart
        mono={false}
        size="m"
      />
      <EuiSpacer
        size="xs"
      />
      <p>
        Loading...
      </p>
    </div>
  </div>
</EuiPopover>
`;
